demoargo/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-service
spec:
  selector:
    app: demo
  ports:
    - protocol: TCP
      port: 90
      targetPort: 8080
  type: NodePort
---
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    demo-service.formation.argocd.local/rewrite-gartget: /
spec:
  rules:
    -http:
      paths:
        - path:
